--- a/templates/msgs/tags/attachment.html
+++ b/templates/msgs/tags/attachment.html
@@ -3,8 +3,8 @@
     {% if thumb %}
       <div class="thumb">
         <img src="{{ thumb }}"
-             style="height:50px;
-                    width:auto"
+             style="height:auto;
+                    width:100px"
              onclick="showLightbox(event, '{{ url }}')"
              class="cursor-pointer rounded-lg">
       </div>
