Update editor to include opt-ins

--- a/templates/flows/flow_editor.html
+++ b/templates/flows/flow_editor.html
@@ -184,6 +184,7 @@
         groups: api + 'groups.json',
         fields: api + 'fields.json',
         labels: api + 'labels.json',
+        optins: api + 'optins.json',
         channels: api + 'channels.json',
         classifiers: api + 'classifiers.json',
         ticketers: api + 'ticketers.json',
