--- a/templates/notifications/email/incident_started.channel_disconnected.html
+++ b/templates/notifications/email/incident_started.channel_disconnected.html
@@ -3,9 +3,8 @@
 
 {% block notification-body %}
   <p>
-    {% url 'channels.channel_read' incident.channel.uuid as read_url %}
-    {% blocktrans trimmed with read_url=read_url %}
-    Your <a href="{{ read_url }}">Android channel</a> appears to be disconnected and hasn't been seen for some time.
+    {% blocktrans trimmed with url=branding.link|add:target_url %}
+    Your <a href="{{ url }}">Android channel</a> appears to be disconnected and hasn't been seen for some time.
     {% endblocktrans %}
   </p>
 {% endblock notification-body %}
