Remove minutes label from channel chart

--- a/templates/channels/channel_read.html
+++ b/templates/channels/channel_read.html
@@ -271,7 +271,7 @@
               },
               yAxis: [{
                 title: {
-                  text: '{{ _("Minutes")|escapejs }}'
+                  text: ''
                 },
                 opposite: false,
                 min: 0,
