--- a/templates/dashboard/home.html
+++ b/templates/dashboard/home.html
@@ -90,7 +90,7 @@
 
       var axis = chart.xAxis[0];
 
-      store.getUrl(`/dashboard/workspace_stats/?min=${axis.min}&max=${axis.max}`).then(function(response) {
+      store.getUrl(`/dashboard/workspace_stats/?min=${axis.min / 1000}&max=${axis.max / 1000}`).then(function(response) {
         var data = response.json;
 
         Highcharts.chart('workspace-chart', {
