--- a/templates/triggers/trigger_create_opt_out.html
+++ b/templates/triggers/trigger_create_opt_out.html
@@ -2,5 +2,5 @@
 {% load i18n %}
 
 {% block summary %}
-  {% trans "Start a flow when a opts out of a topic they previously opted in to." %}
+  {% trans "Start a flow when a contact opts out of a topic they previously opted in to." %}
 {% endblock summary %}
