--- a/templates/msgs/broadcast_scheduled_read.html
+++ b/templates/msgs/broadcast_scheduled_read.html
@@ -7,7 +7,7 @@
     <div class="shadow-lg bg-white rounded-t-lg px-4 py-3 border-b bg-gray-300 font-normal text-gray-600">{% trans "Send History" %}</div>
     <div class="shadow overflow-y-auto rounded-b-lg">
       <table style="border-radius: 0;
-                    {% if not org_perms.msgs.broadcast_send %}margin-top:10px{% endif %}"
+                    {% if not org_perms.msgs.broadcast_create %}margin-top:10px{% endif %}"
              class="list bg-white">
         <tbody>
           {% for object in send_history %}
