--- a/templates/includes/recipients_contact.html
+++ b/templates/includes/recipients_contact.html
@@ -1,11 +1,8 @@
 {% load contacts i18n %}
 
 {% if contact.is_active %}
-  <a href="{% url 'contacts.contact_read' contact.uuid %}" onclick="goto(event, this)">
-    <temba-label icon="contact" clickable class="mr-1 mb-1">
-      {{ contact|name_or_urn:user_org }}
-    </temba-label>
-  </a>
+  <!-- djlint:off -->
+  <a href="{% url 'contacts.contact_read' contact.uuid %}" onclick="goto(event, this)"><temba-label icon="contact" clickable class="mr-1 mb-1">{{ contact|name_or_urn:user_org }}</temba-label></a>
 {% else %}
   <temba-label icon="contact" clickable class="mr-1 mb-1">
     <div class="line-through">{% trans "Deleted" %}</div>
