--- a/templates/includes/recipients.html
+++ b/templates/includes/recipients.html
@@ -12,7 +12,7 @@
 {% endfor %}
 {% for group in exclude_groups %}
   {% if group.is_active %}
-    {% include "includes/recipients_group.html" with group=group exclusion=groups_as_filters %}
+    {% include "includes/recipients_group.html" with group=group groups_as_filters=groups_as_filters exclusion=True %}
   {% endif %}
 {% endfor %}
 {% with groups|inactive_count as num_deleted_groups %}
