--- a/templates/includes/recipients_group.html
+++ b/templates/includes/recipients_group.html
@@ -1,4 +1,4 @@
 <!-- djlint:off -->
-<a href="{% url 'contacts.contact_filter' group.uuid %}" onclick="goto(event, this)"><temba-label icon="group{% if exclusion %}_exclude{% elif groups_as_filters %}_include{% endif %}"
-             clickable
-             class="mr-1 mb-1">{{ group.name }}</temba-label></a>
+<a href="{% url 'contacts.contact_filter' group.uuid %}" onclick="goto(event, this)"><temba-label icon="group{% if groups_as_filters %}{% if exclusion %}_exclude{% else %}_include{% endif %}{% endif %}"
+    clickable
+  class="mr-1 mb-1">{{ group.name }}</temba-label></a>
