Support multiple keywords per trigger in UI

--- a/templates/triggers/trigger_create_keyword.html
+++ b/templates/triggers/trigger_create_keyword.html
@@ -2,5 +2,5 @@
 {% load i18n %}
 
 {% block summary %}
-  {% trans "Create a message keyword that launches a flow." %}
+  {% trans "Start a flow based on keywords in an incoming message." %}
 {% endblock summary %}
