--- a/templates/flows/flow_list.html
+++ b/templates/flows/flow_list.html
@@ -49,8 +49,8 @@
               <td>
                 <div class="flex items-center">
                   <div class="flex-grow">
-                    <div style="max-width:80%" class="flex inline whitespace-nowrap flex-grow items-center">
-                      <div class="inline-block flex items-center text-gray-600">
+                    <div style="max-width:80%" class="flex whitespace-nowrap flex-grow items-center">
+                      <div class="flex items-center text-gray-600">
                         {% if object.flow_type == 'V' %}
                           <temba-icon name="flow_ivr" class="mr-2">
                           </temba-icon>
@@ -80,11 +80,12 @@
                 {% if not object.is_archived %}
                   <div class="whitespace-no-break flex items-center justify-end">
                     {% if object.has_issues %}
-                    <div>
-                      <temba-tip position="top" text="{{ _("Has issues") |escapejs }}" slot="toggle">
-                        <temba-icon name="issue" class="mr-2" clickable="true"></temba-icon>
-                      </temba-tip>
-                    </div>
+                      <div>
+                        <temba-tip position="top" text="{{ _("Has issues") |escapejs }}" slot="toggle">
+                          <temba-icon name="issue" class="mr-2" clickable="true">
+                          </temba-icon>
+                        </temba-tip>
+                      </div>
                     {% endif %}
                     {% if object.run_stats.total %}
                       <div onclick="goto(event)"
