Allow triggers to wrap

--- a/templates/triggers/trigger_list.html
+++ b/templates/triggers/trigger_list.html
@@ -57,7 +57,7 @@
             {% endif %}
             <td>
               <div>
-                <div style="max-width:80%" class="flex whitespace-nowrap flex-grow items-center">
+                <div style="max-width:80%" class="flex flex-grow items-center">
                   <div class="flex items-center mr-2">
                     <temba-icon name="{{ obj.type.icon }}" class="text-gray-600">
                     </temba-icon>
