Move two factor views out of main menu and into the account view

--- a/templates/orgs/user_account.html
+++ b/templates/orgs/user_account.html
@@ -2,14 +2,27 @@
 {% load i18n %}
 
 {% block content %}
-  {% if not two_factor_enabled %}
-    <temba-alert level="info" class="mb-4">
-      {% url "orgs.user_two_factor_enable" as otp_url %}
-      {% blocktrans with brand=brand.name %}
-        {{brand}} recommends that you enable <temba-anchor href="{{otp_url}}">two factor authentication.</temba-anchor>
-
-      {% endblocktrans %}
-    </temba-alert>
-  {% endif %}
   {% include "formax.html" %}
+  <div class="flex flex-row bg-gray-200 border border-gray-400 rounded-lg cursor-pointer items-center"
+       onclick="goto(event)"
+       href="{% if two_factor_enabled %}{% url 'orgs.user_two_factor_disable' %}{% else %}{% url 'orgs.user_two_factor_enable' %}{% endif %}">
+    <div class="m-8 text-4xl text-gray-600 items-center">
+      <temba-icon name="two_factor_{% if two_factor_enabled %}enabled{% else %}disabled{% endif %}">
+      </temba-icon>
+    </div>
+    <div class="flex-grow p-6">
+      <div class="flex items-center">
+        {% if two_factor_enabled %}
+          <div class="flex-grow mr-4">
+            {% trans "Two factor authentication is currently <b>enabled</b>." %}
+          </div>
+          <div onclick="goto(event)" href="{% url "orgs.user_two_factor_tokens" %}" class="button-light">{% trans "Backup Tokens" %}</div>
+        {% else %}
+          <div class="flex-grow mr-4">
+            {% trans "Two factor authentication is currently <b>not enabled</b>." %}
+          </div>
+        {% endif %}
+      </div>
+    </div>
+  </div>
 {% endblock content %}
