--- a/templates/orgs/org_join_accept.html
+++ b/templates/orgs/org_join_accept.html
@@ -4,19 +4,17 @@
 {% block content %}
   <div class="flex w-full mb-4">
     <div class="flex-grow ml-1">
-      {% blocktrans trimmed with name=org.name %}
-        You have been invited to join {{ name }}.
+      {% blocktrans trimmed with org=invitation.org.name %}
+        You have been invited to join the <b>{{ org }}</b> workspace.
       {% endblocktrans %}
-    </br>
-    {% trans "Please click Join to accept the invitation." %}
+    </div>
   </div>
-</div>
-<div class="flex w-full mb-4">
-  <div class="flex-grow ml-1">
-    <form method="post" encrypt="multipart/form-data" class="mb-4">
-      {% csrf_token %}
-      <input type="submit" value="{{ submit_button_name }}" class="button-primary">
-    </form>
+  <div class="flex w-full mb-4">
+    <div class="flex-grow ml-1">
+      <form method="post" encrypt="multipart/form-data" class="mb-4">
+        {% csrf_token %}
+        <input type="submit" value="{{ submit_button_name }}" class="button-primary">
+      </form>
+    </div>
   </div>
-</div>
 {% endblock content %}
