--- a/templates/channels/types/facebookapp/claim.html
+++ b/templates/channels/types/facebookapp/claim.html
@@ -25,7 +25,7 @@
     <div class="flex mt-4" id="fb-app-connect">
       <div class="button-primary connect-facebook">{% trans "Add Facebook Page" %}</div>
     </div>
-    <form style="display:none;" method="POST" action="{{ claim_url }}" id="claim-form">
+    <form style="display:none;" method="post" action="{{ claim_url }}" id="claim-form">
       {% csrf_token %}
       <input type="text" name="user_access_token" id="user-access-token">
       <input type="text" name="page_id" id="page-id">
@@ -61,7 +61,7 @@
   <script type="text/javascript">
     $(document).ready(function() {
       $(".connect-facebook").click(function(evt) {
-        location.replace("https://www.facebook.com/v17.0/dialog/oauth?client_id={{ facebook_app_id }}&redirect_uri=" + window.location.origin + window.location.pathname + "&scope=pages_messaging,pages_show_list,pages_manage_metadata,pages_read_engagement&response_type=token")
+        location.replace("https://www.facebook.com/v18.0/dialog/oauth?client_id={{ facebook_app_id }}&redirect_uri=" + window.location.origin + window.location.pathname + "&scope=pages_messaging,pages_show_list,pages_manage_metadata,pages_read_engagement&response_type=token")
 
       });
 
