--- a/templates/channels/types/whatsapp/connect.html
+++ b/templates/channels/types/whatsapp/connect.html
@@ -24,7 +24,7 @@
     <div class="flex mt-4" id="fb-app-connect">
       <div onclick="launchWhatsAppSignup()" class="button-primary">{% trans "Add Facebook Business" %}</div>
     </div>
-    <form style="display:none;" method="POST" action="{{ connect_url }}" id="claim-form">
+    <form style="display:none;" method="post" action="{{ connect_url }}" id="claim-form">
       {% csrf_token %}
       <input type="text" name="user_access_token" id="user-access-token">
     </form>
@@ -55,7 +55,7 @@
         appId: '{{ facebook_app_id }}', // Meta App ID
         cookie: true, // enable cookies
         xfbml: true, // parse social plugins on this page
-        version: 'v14.0' //Graph API version
+        version: 'v18.0' //Graph API version
       });
     };
     // Load the JavaScript SDK asynchronously
@@ -81,7 +81,7 @@
           //Use this token to call the debug_token API and get the shared WABA's ID
         } else {
           console.log('User cancelled login or did not fully authorize, redirect to the dialog auth');
-          location.replace("https://www.facebook.com/v17.0/dialog/oauth?client_id={{ facebook_app_id }}&redirect_uri=" + window.location.origin + window.location.pathname + "&scope=business_management,whatsapp_business_management,whatsapp_business_messaging&response_type=token")
+          location.replace("https://www.facebook.com/v18.0/dialog/oauth?client_id={{ facebook_app_id }}&redirect_uri=" + window.location.origin + window.location.pathname + "&scope=business_management,whatsapp_business_management,whatsapp_business_messaging&response_type=token")
         }
       }, {
         scope: 'business_management,whatsapp_business_management,whatsapp_business_messaging',
