Replace all brand link with brand domain use

--- a/templates/api/v2/api_explorer.html
+++ b/templates/api/v2/api_explorer.html
@@ -84,7 +84,7 @@
           <div class="request-header font-mono mb-4">
             <b class="font-bold">{{ endpoint.method }}</b>
             <div class="md:text-base md:inline whitespace-nowrap text-sm">
-              {{ brand.link }}{{ endpoint.url }}.json<span class="query-display"></span>
+              https://{{ brand.domain }}{{ endpoint.url }}.json<span class="query-display"></span>
               <br />
             </div>
             <b class="font-bold">Authorization:</b>
