--- a/templates/orgs/email/invitation_email.html
+++ b/templates/orgs/email/invitation_email.html
@@ -3,10 +3,10 @@
 
 {% block body %}
   <p>
-    {% blocktrans trimmed with org=org.name link=branding.link brand=branding.name secret=invitation.secret %}
+    {% blocktrans trimmed with org=org.name domain=branding.domain brand=branding.name secret=invitation.secret %}
       You've been invited to join {{ brand }} as a member of {{ org }}.
       <br />
-      To accept the invitation, <a href='{{ link }}/org/join/{{ secret }}/'>click here</a>.
+      To accept the invitation, <a href='https://{{ domain }}/org/join/{{ secret }}/'>click here</a>.
     {% endblocktrans %}
   </p>
 {% endblock body %}
