--- a/templates/orgs/email/user_forget.html
+++ b/templates/orgs/email/user_forget.html
@@ -10,7 +10,7 @@
     {% endblocktrans %}
   </p>
   <p align="center">
-    <a href='{{ branding.link }}{{ path }}'>Reset password</a>
+    <a href='https://{{ branding.domain }}{{ path }}'>Reset password</a>
   </p>
   <p>{% trans "If you did not request this, don't worry, this email has only been sent to you and your account remains secure." %}</p>
   <p>{% trans "Thank you. Please do not reply to this email." %}</p>
